# practice-platform

./: .dockerignore  .env.example  .gitignore  CONSTITUTION.md  CONTRIBUTING.md  Dockerfile  PLAN.md  README.md  README_PROGRESS.md  SPECIFICATION.md  TASKS.md  TUI_PLAN.md  TUI_SPECIFICATION.md  TUI_TASKS.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
9021/: sample_1.py  sample_2.py  sample_5.py
app/: __init__.py  cli.py  config.py  db.py  importer.py  models.py  opener.py  problem_index.py  pytest_harness.py  runner.py  statements.py  tui.css  tui.py  tui_actions.py  tui_data.py  tui_format.py  web.py
docs/: architecture.md  repository-structure.md
scripts/: archive_structured_duplicates.py  cleanup_structured_metadata.py  migrate_doctest_bundle.py  migrate_doctest_problem.py  normalize_public_examples.py  rename_structured_problems.py
statements/: final__1.question_1.md  final__1.question_2.md  final__1.question_3.md  final__1.question_4.md  final__1.question_5.md  final__1.question_6.md  final__1754923206907sYV.期末整理.sample1.question_2.md  final__1754923206907sYV.期末整理.sample1.question_3.md  final__1754923206907sYV.期末整理.中等_rounding.21T1_2.md  final__1754923206907sYV.期末整理.中等_rounding.21T2_1.md  final__1754923206907sYV.期末整理.中等_rounding.21T2_2.md  final__1754923206907sYV.期末整理.中等_rounding.21T3_22T3_23T2.md  final__1754923206907sYV.期末整理.中等_列表.1.md  final__1754923206907sYV.期末整理.中等_列表.2.md  final__1754923206907sYV.期末整理.中等_列表.21T1_1.md  final__1754923206907sYV.期末整理.中等_质数.22T2_25T1.md  final__1754923206907sYV.期末整理.中等_质数.3.md  final__2.sample_1.md  (+18 more)
(+299 files in other folders)
