[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "practice-cli"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "pytest",
  "textual",
  "rich",
  "typer",
  "fastapi",
  "uvicorn",
  "jinja2",
  "markdown",
]

[tool.setuptools]
packages = ["app"]
